--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "mongoose": "^8.5.4",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.8.0"
   },
   "name": "server",
   "version": "1.0.0",
