Finshed everything. Starting on the Authentication part

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,17 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@mui/x-charts": "^7.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.5",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-use": "^17.5.1",
+    "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
