--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Ignore node_modules in server and frontend
 /server/node_modules
+/server/.env
 /frontend/node_modules
 
 # Optional: Ignore logs, build files, and other common files
 *.log
 build/
 dist/
+.env
