--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.4",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4",
     "socket.io": "^4.8.0"
   },
