--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "socket.io": "^4.8.0"
   },
